--- a/pl/o-nas.html
+++ b/pl/o-nas.html
@@ -321,6 +321,8 @@
 									      <input class="u-full-width" placeholder="" id="TelInput" name="TelInput" type="text" required>
 									      <label for="EmailInput">Adres E-mail</label>
 									      <input class="u-full-width" placeholder="" id="EmailInput" name="EmailInput" type="email" required>
+											<label for="EmailInput">Ile jest 3 razy 2</label>
+											<input class="u-full-width" placeholder="" id="quiz" name="quiz" type="number" required>
 									    </div>
 									     <!--
 									    <div class="six columns">
