--- a/strom-und-gas.html
+++ b/strom-und-gas.html
@@ -204,6 +204,8 @@
 									      <input class="u-full-width" placeholder="" id="TelInput" name="TelInput" type="text" required>
 									      <label for="EmailInput">E-Mail</label>
 									      <input class="u-full-width" placeholder="" id="EmailInput" name="EmailInput" type="email" required>
+											<label for="EmailInput">Wie viel ergibt 3 mal 2</label>
+											<input class="u-full-width" placeholder="" id="quiz" name="quiz" type="number" required>
 									    </div>
 									     <!--
 									    <div class="six columns">
